--- a/src/main/resources/templates/country/_form.html
+++ b/src/main/resources/templates/country/_form.html
@@ -5,8 +5,8 @@
 <!--    <input class="input" type="text" th:field="*{updated_at}" th:readonly="updated_at"/>-->
     <table>
         <tr>
-            <td>Id continent</td>
             <td>
+                <label>Continent</label><br>
                 <select th:field="*{continents.id}">
                     <span th:if="*{continents.id == null}">
                         <option value="">SELECT CONTINENT</option>
@@ -17,54 +17,78 @@
                         Address
                     </option>
                 </select>
+                <div th:if="${#fields.hasErrors('continents.id')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                    <span th:errors="*{continents.id}" ></span>
+                </div>
             </td>
-            <td  th:if="${#fields.hasErrors('continents.id')}" th:errors="*{continents.id}" style="color: red"></td>
-        </tr>
-        <tr>
-            <td>Continent</td>
-            <td><input class="input" type="text" th:field="*{continent}" placeholder="Continent"/></td>
-        </tr>
-        <tr>
-            <td>Country En</td>
-            <td><input class="input" type="text" th:field="*{countryEn}" placeholder="Continent En"/></td>
-            <td  th:if="${#fields.hasErrors('countryEn')}" th:errors="*{countryEn}" style="color: red">></td>
-        </tr>
-        <tr>
-            <td>Country Pl</td>
-            <td><input class="input" type="text" th:field="*{countryPl}" placeholder="Continent Pl"/></td>
-            <td  th:if="${#fields.hasErrors('countryPl')}" th:errors="*{countryPl}" style="color: red">></td>
-        </tr>
-        <tr>
-            <td>Capital City</td>
-            <td><input class="input" type="text" th:field="*{capital_city}" placeholder="Capital City"/></td>
-            <td  th:if="${#fields.hasErrors('capital_city')}" th:errors="*{capital_city}" style="color: red">></td>
-        </tr>
-        <tr>
-            <td>Alfa 2</td>
-            <td><input class="input" type="text" th:field="*{alfa_2}" placeholder="ALFA 2"/></td>
-            <td  th:if="${#fields.hasErrors('alfa_2')}" th:errors="*{alfa_2}" style="color: red">></td>
-        </tr>
-        <tr>
-            <td>Alfa 3</td>
-            <td><input class="input" type="text" th:field="*{alfa_3}" placeholder="ALFA 3"/></td>
-            <td  th:if="${#fields.hasErrors('alfa_3')}" th:errors="*{alfa_3}" style="color: red">></td>
-        </tr>
-        <tr>
-            <td>Numeric Code</td>
-            <td><input class="input" type="text" th:field="*{numeric_code}" placeholder="First Name"/></td>
-            <td  th:if="${#fields.hasErrors('numeric_code')}" th:errors="*{numeric_code}" style="color: red">></td>
-        </tr>
-        <tr>
-            <td>ISO Code</td>
-            <td><input class="input" type="text" th:field="*{iso_code}" placeholder="First Name"/></td>
-        </tr>
-        <tr>
-            <td>Exist</td>
-            <td><input class="input" type="checkbox" th:field="*{exists}" placeholder="Numeric Code"/></td>
-        </tr>
-        <tr>
-            <td>Description</td>
             <td>
+                <label>Continent</label><br>
+                <input class="input" type="text" th:field="*{continent}" placeholder="Continent"/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label>Country En</label><br>
+                <input class="input" type="text" th:field="*{countryEn}" placeholder="Continent En"/>
+                <div th:if="${#fields.hasErrors('countryEn')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                    <span th:errors="*{countryEn}" ></span>
+                </div>
+            </td>
+            <td>
+                <label>Country Pl</label><br>
+                <input class="input" type="text" th:field="*{countryPl}" placeholder="Continent Pl"/>
+                <div th:if="${#fields.hasErrors('countryPl')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                    <span th:errors="*{countryPl}" ></span>
+                </div>
+            </td>
+            <td>
+                <label>Capital City</label><br>
+                <input class="input" type="text" th:field="*{capital_city}" placeholder="Capital City"/>
+                <div th:if="${#fields.hasErrors('capital_city')}"  class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                    <span th:errors="*{capital_city}" ></span>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label>Alfa 2</label><br>
+                <input class="input" type="text" th:field="*{alfa_2}" placeholder="ALFA 2"/>
+                <div th:if="${#fields.hasErrors('alfa_2')}"  class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                    <span th:errors="*{alfa_2}" ></span>
+                </div>
+            </td>
+            <td>
+                <label>Alfa 3</label><br>
+                <input class="input" type="text" th:field="*{alfa_3}" placeholder="ALFA 3"/>
+                <div th:if="${#fields.hasErrors('alfa_3')}"  class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                    <span th:errors="*{alfa_3}" ></span>
+                </div>
+            </td>
+        <tr>
+
+        </tr>
+        <tr>
+            <td>
+                <label>Numeric Code</label><br>
+                <input class="input" type="text" th:field="*{numeric_code}" placeholder="First Name"/>
+                <div th:if="${#fields.hasErrors('numeric_code')}"  class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                    <span th:errors="*{numeric_code}" ></span>
+                </div>
+            </td>
+            <td>
+                <label>ISO Code</label><br>
+                <input class="input" type="text" th:field="*{iso_code}" placeholder="iso code"/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label>Exist</label><br>
+                <input class="input" type="checkbox" th:field="*{exists}" placeholder="exist"/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label>Description</label><br>
                 <div>
                     <textarea class="input" th:field="*{description}" placeholder="Description"></textarea>
                 </div>
