--- a/src/main/resources/templates/currency/list.html
+++ b/src/main/resources/templates/currency/list.html
@@ -18,13 +18,40 @@
             <h3>Brak Dodanych walut do państwa - [[${country.getCurrencies.size}]]</h3>
         </div>
 
-        <div>
-            <lu>
-                <block th:each="currency : ${country.getCurrencies}">
-                    <li th:text="${currency.id} + ' - ' + ${currency.pattern} + ' - ' + ${currency.currencySeries}"></li>
-                </block>
-            </lu>
-        </div>
+<!--        <div>-->
+<!--            <lu>-->
+<!--                <block th:each="currency : ${country.getCurrencies}">-->
+<!--                    <li th:text="${currency.id} + ' - ' + ${currency.pattern} + ' - ' + ${currency.currencySeries}"></li>-->
+<!--                </block>-->
+<!--            </lu>-->
+<!--        </div>-->
+        <table class="table table-striped table-bordered table-hover table-sm">
+            <thead class="thead-dark">
+            <tr>
+                <!--                <th>CON</th>-->
+                <th>Lp:</th>
+                <th>ID</th>
+                <th>Seria</th>
+                <th style="width: 156px">Akcja</th>
+            </tr>
+            </thead>
+            <tbody>
+            <Block th:each="currency, i : ${country.getCurrencies}">
+                <tr>
+                    <!--                    <td th:text="${country.getContinents().getContinentCode()}"></td>-->
+                    <td th:text="${(i.index + 1)}"></td>
+                    <td th:text="${currency.id}" class="pt-1 pb-1"></td>
+
+                    <td th:text="${currency.currencySeries}" class="pt-1 pb-1" style="font-size: 12px"></td>
+                    <td class="pt-1 pb-1">
+                        <a th:href="@{'/curency/show/' + ${currency.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>
+                        <a th:href="@{'/currency/edit/' + ${currency.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>
+                        <a th:href="@{'/currency/delete/' + ${currency.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>
+                    </td>
+                </tr>
+            </Block>
+            </tbody>
+        </table>
 
 
 <!--        <a th:href="@{/country/new}" class="btn btn-sm btn-primary">Add new Country</a>-->
