--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -50,7 +50,7 @@
                         <!--                        <a class="dropdown-item" th:href="@{/country}">Continent</a>-->
                         <!--                        <a class="dropdown-item" th:href="@{/country/new}">Dodaj Państwo</a>                        <div class="dropdown-divider"></div>-->
                         <a class="dropdown-item" th:href="@{/active}">Active</a>
-
+                        <a class="dropdown-item" th:href="@{/pattern}">Pattern</a>
                     </div>
                 </li>
 <!--                <li class="nav-item">-->
