--- a/src/main/resources/templates/currency/_form.html
+++ b/src/main/resources/templates/currency/_form.html
@@ -19,11 +19,20 @@
             </td>
             <td>
                 <div class="field">
-                <label>Pattern</label><br>
-                    <input type="text" th:field="*{pattern}" class="form-control form-control-sm" placeholder="Pattern"/>
-                    <div th:if="${#fields.hasErrors('pattern')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
-                        <span th:errors="*{pattern}" ></span>
-                    </div>
+                    <label>Pattern</label><br>
+                    <select th:field="*{patterns.id}" class="form-control form-control-sm">
+                        <span th:if="*{patterns.id == null}">
+                            <option value="">SELECT</option>
+                        </span>
+                        <option th:each="pattern : ${patterns}"
+                                th:value="${pattern.id}"
+                                th:text="${pattern.pattern}">
+                            Address
+                        </option>
+                    </select>
+                </div>
+                <div th:if="${#fields.hasErrors('patterns.id')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                    <span th:errors="*{patterns.id}" ></span>
                 </div>
             </td>
             <td>
@@ -42,9 +51,6 @@
                 <div class="field">
                     <label>Change</label><br>
                     <input type="text" th:field="*{change}" class="form-control form-control-sm" placeholder="Change"/>
-                    <!--                <div th:if="${#fields.hasErrors('capital_city')}"  class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >-->
-                    <!--                    <span th:errors="*{capital_city}" ></span>-->
-                    <!--                </div>-->
                 </div>
             </td>
             <td>
