--- a/src/main/resources/templates/note/index.html
+++ b/src/main/resources/templates/note/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div layout:fragment="content" class="container">
-    <h1 style="text-align: center">COUNTRY Get Currency</h1>
-        <form th:action="@{/currency/search}" method="post" class="form-inline my-2 my-lg-0">
+    <h1 style="text-align: center">Note Country</h1>
+        <form th:action="@{/note/search}" method="post" class="form-inline my-2 my-lg-0">
             <input type="text" name="keyword" th:value="${keyword}" class="form-control mr-sm-2" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
@@ -19,10 +19,10 @@
                 <Block th:each="country : ${countries}">
                     <div class="col-sm-2" style="width: 170px">
                         <div calss="container" style="margin: 15px; width: 160px">
-                            <a th:href="@{'/currency/list/' + ${country.id}}">
+<!--                            <a th:href="@{'/currency/list/' + ${country.id}}">-->
                                 <img th:src="@{'/images/flags/' + ${country.countryEn} + '.png'}" style="width: 80px; max-height: 60px"/><br>
                                 <span th:text="${country.countryEn}" style="font-size: small; display: flex"></span>
-                            </a>
+<!--                            </a>-->
                         </div>
                     </div>
                 </Block>
