--- a/src/main/resources/templates/note/index.html
+++ b/src/main/resources/templates/note/index.html
@@ -19,10 +19,10 @@
                 <Block th:each="country : ${countries}">
                     <div class="col-sm-2" style="width: 170px">
                         <div calss="container" style="margin: 15px; width: 160px">
-<!--                            <a th:href="@{'/currency/list/' + ${country.id}}">-->
+                            <a th:href="@{'/note/currency/' + ${country.countryEn}}">
                                 <img th:src="@{'/images/flags/' + ${country.countryEn} + '.png'}" style="width: 80px; max-height: 60px"/><br>
                                 <span th:text="${country.countryEn}" style="font-size: small; display: flex"></span>
-<!--                            </a>-->
+                            </a>
                         </div>
                     </div>
                 </Block>
