--- a/src/main/resources/templates/note/currency.html
+++ b/src/main/resources/templates/note/currency.html
@@ -9,15 +9,43 @@
 <body>
     <div layout:fragment="content" class="container">
     <h1 style="text-align: center">Note Currency</h1>
+        <h2 th:text="${currencies[0].countries.countryEn}"></h2>
 
 
         <div class="container">
+            <table class="table table-striped table-bordered table-hover table-sm">
+                <thead class="thead-dark">
+                <tr>
+                    <!--                <th>CON</th>-->
+                    <th>Lp:</th>
+                    <th>Id</th>
+                    <th>Seria</th>
+                    <th style="width: 156px">Akcja</th>
+                </tr>
+                </thead>
+                <tbody>
+                <Block th:each="currency, i : ${currencies}">
+                    <tr>
+                        <!--                    <td th:text="${country.getContinents().getContinentCode()}"></td>-->
+                        <td th:text="${i.index +1}"></td>
+                        <td th:text="${currency.id}"></td>
+                        <td th:text="${currency.currencySeries}"></td>
+                        <td class="pt-1 pb-1">
+                            <a th:href="@{'/currency/show/' + ${currency.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>
+<!--                            <a th:href="@{'/currency/edit/' + ${currency.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>-->
+<!--                            <a th:href="@{'/currency/delete/' + ${currency.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>-->
+                        </td>
+                    </tr>
+                </Block>
+                </tbody>
+            </table>
             <div class="row">
-                <ls>
-                    <th:block th:each="currency : ${currencies}">
-                        <li th:text="${currency.currencySeries}"></li>
-                    </th:block>
-                </ls>
+<!--                <ls>-->
+<!--                    <th:block th:each="currency : ${currencies}">-->
+<!--                        <li th:text="${currency.currencySeries}"></li>-->
+<!--                    </th:block>-->
+<!--                </ls>-->
+
 <!--                <Block th:each="country : ${countries}">-->
 <!--                    <div class="col-sm-2" style="width: 170px">-->
 <!--                        <div calss="container" style="margin: 15px; width: 160px">-->
