--- a/src/main/resources/templates/note/currency.html
+++ b/src/main/resources/templates/note/currency.html
@@ -31,7 +31,8 @@
                         <td th:text="${currency.id}"></td>
                         <td th:text="${currency.currencySeries}"></td>
                         <td class="pt-1 pb-1">
-                            <a th:href="@{'/currency/show/' + ${currency.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>
+                            <a th:href="@{'/note/note_list/?currencySeries=' + ${currency.currencySeries}}">SHOW</a>
+<!--                            <a th:href="@{'/note/note_list' + ${currency.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
 <!--                            <a th:href="@{'/currency/edit/' + ${currency.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>-->
 <!--                            <a th:href="@{'/currency/delete/' + ${currency.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>-->
                         </td>
