--- a/src/main/resources/templates/note/currency.html
+++ b/src/main/resources/templates/note/currency.html
@@ -9,56 +9,61 @@
 <body>
     <div layout:fragment="content" class="container">
     <h1 style="text-align: center">Note Currency</h1>
-        <h2 th:text="${currencies[0].countries.countryEn}"></h2>
+        <div th:if="${currencies.size} > 0">
+            <h2 th:text="${currencies[0].countries.countryEn}"></h2>
 
-
-        <div class="container">
-            <table class="table table-striped table-bordered table-hover table-sm">
-                <thead class="thead-dark">
-                <tr>
-                    <!--                <th>CON</th>-->
-                    <th>Lp:</th>
-                    <th>Id</th>
-                    <th>Seria</th>
-                    <th style="width: 156px">Akcja</th>
-                </tr>
-                </thead>
-                <tbody>
-                <Block th:each="currency, i : ${currencies}">
+            <div class="container">
+                <table class="table table-striped table-bordered table-hover table-sm">
+                    <thead class="thead-dark">
                     <tr>
-                        <!--                    <td th:text="${country.getContinents().getContinentCode()}"></td>-->
-                        <td th:text="${i.index +1}"></td>
-                        <td th:text="${currency.id}"></td>
-                        <td th:text="${currency.currencySeries}"></td>
-                        <td class="pt-1 pb-1">
-                            <a th:href="@{'/note/note_list/?currencySeries=' + ${currency.currencySeries}}">SHOW</a>
-<!--                            <a th:href="@{'/note/note_list' + ${currency.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
-<!--                            <a th:href="@{'/currency/edit/' + ${currency.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>-->
-<!--                            <a th:href="@{'/currency/delete/' + ${currency.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>-->
-                        </td>
+                        <!--                <th>CON</th>-->
+                        <th>Lp:</th>
+                        <th>Id</th>
+                        <th>Seria</th>
+                        <th>Total</th>
+                        <th style="width: 156px">Akcja</th>
                     </tr>
-                </Block>
-                </tbody>
-            </table>
-            <div class="row">
-<!--                <ls>-->
-<!--                    <th:block th:each="currency : ${currencies}">-->
-<!--                        <li th:text="${currency.currencySeries}"></li>-->
-<!--                    </th:block>-->
-<!--                </ls>-->
+                    </thead>
+                    <tbody>
+                    <Block th:each="currency, i : ${currencies}">
+                        <tr>
+                            <!--                    <td th:text="${country.getContinents().getContinentCode()}"></td>-->
+                            <td th:text="${i.index +1}"></td>
+                            <td th:text="${currency.id}"></td>
+                            <td th:text="${currency.currencySeries}"></td>
+                            <td th:text="${currency.notes.size}"></td>
+                            <td class="pt-1 pb-1">
+                                <a th:href="@{'/note/note_list/?currencySeries=' + ${currency.currencySeries} + '&curId=' + ${currency.id}}">SHOW</a>
+                                <!--                            <a th:href="@{'/note/note_list' + ${currency.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
+                                <!--                            <a th:href="@{'/currency/edit/' + ${currency.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>-->
+                                <!--                            <a th:href="@{'/currency/delete/' + ${currency.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>-->
+                            </td>
+                        </tr>
+                    </Block>
+                    </tbody>
+                </table>
+                <div class="row">
+                    <!--                <ls>-->
+                    <!--                    <th:block th:each="currency : ${currencies}">-->
+                    <!--                        <li th:text="${currency.currencySeries}"></li>-->
+                    <!--                    </th:block>-->
+                    <!--                </ls>-->
 
-<!--                <Block th:each="country : ${countries}">-->
-<!--                    <div class="col-sm-2" style="width: 170px">-->
-<!--                        <div calss="container" style="margin: 15px; width: 160px">-->
-<!--&lt;!&ndash;                            <a th:href="@{'/currency/list/' + ${country.id}}">&ndash;&gt;-->
-<!--                                <img th:src="@{'/images/flags/' + ${country.countryEn} + '.png'}" style="width: 80px; max-height: 60px"/><br>-->
-<!--                                <span th:text="${country.countryEn}" style="font-size: small; display: flex"></span>-->
-<!--&lt;!&ndash;                            </a>&ndash;&gt;-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </Block>-->
+                    <!--                <Block th:each="country : ${countries}">-->
+                    <!--                    <div class="col-sm-2" style="width: 170px">-->
+                    <!--                        <div calss="container" style="margin: 15px; width: 160px">-->
+                    <!--&lt;!&ndash;                            <a th:href="@{'/currency/list/' + ${country.id}}">&ndash;&gt;-->
+                    <!--                                <img th:src="@{'/images/flags/' + ${country.countryEn} + '.png'}" style="width: 80px; max-height: 60px"/><br>-->
+                    <!--                                <span th:text="${country.countryEn}" style="font-size: small; display: flex"></span>-->
+                    <!--&lt;!&ndash;                            </a>&ndash;&gt;-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
+                    <!--                </Block>-->
+                </div>
             </div>
         </div>
+
+
 
 
     </div>
