--- a/src/main/resources/templates/note/note_list.html
+++ b/src/main/resources/templates/note/note_list.html
@@ -9,7 +9,39 @@
 <body>
     <div layout:fragment="content" class="container">
     <h1 style="text-align: center">Note</h1>
+    <H3>Ilość banknotów - [[${notes.size}]]</H3>
+        <h3 th:text="${currency.countries.countryEn}"></h3>
 
+        <div class="container">
+            <table class="table table-striped table-bordered table-hover table-sm">
+                <thead class="thead-dark">
+                <tr>
+                    <!--                <th>CON</th>-->
+                    <th>Lp:</th>
+                    <th>Id</th>
+                    <th>Denomination</th>
+                    <th>Currency</th>
+                    <th style="width: 156px">Akcja</th>
+                </tr>
+                </thead>
+                <tbody>
+                <Block th:each="note, i : ${notes}">
+                    <tr>
+                        <!--                    <td th:text="${country.getContinents().getContinentCode()}"></td>-->
+                        <td th:text="${i.index +1}"></td>
+                        <td th:text="${note.id}"></td>
+                        <td th:text="${note.denomination}"></td>
+                        <td th:text="${note.nameCurrency}"></td>
+                        <td class="pt-1 pb-1">
+                            <!--                            <a th:href="@{'/note/note_list' + ${currency.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
+                            <!--                            <a th:href="@{'/currency/edit/' + ${currency.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>-->
+                            <!--                            <a th:href="@{'/currency/delete/' + ${currency.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>-->
+                        </td>
+                    </tr>
+                </Block>
+                </tbody>
+            </table>
+        </div>
 
 
 <!--        <div class="container">-->
