--- a/src/main/resources/templates/note/currency.html
+++ b/src/main/resources/templates/note/currency.html
@@ -10,34 +10,36 @@
     <div layout:fragment="content" class="container">
     <h1 style="text-align: center">Note Currency</h1>
         <div th:if="${currencies.size} > 0">
-            <h2 th:text="${currencies[0].countries.countryEn}"></h2>
+<!--            <h2 th:text="${currencies[0].countries.countryEn}"></h2>-->
+            <div th:replace="fragments/_flag :: flag(country = ${currencies[0].countries.countryEn})"></div>
 
             <div class="container">
                 <table class="table table-striped table-bordered table-hover table-sm">
                     <thead class="thead-dark">
                     <tr>
                         <!--                <th>CON</th>-->
-                        <th>Lp:</th>
-                        <th>Id</th>
-                        <th>Seria</th>
-                        <th>Total</th>
-                        <th style="width: 156px">Akcja</th>
+                        <th class="pt-1 pb-1">Lp:</th>
+                        <th class="pt-1 pb-1">Id</th>
+                        <th class="pt-1 pb-1">Seria</th>
+                        <th class="pt-1 pb-1">Total</th>
+<!--                        <th style="width: 156px">Akcja</th>-->
                     </tr>
                     </thead>
                     <tbody>
                     <Block th:each="currency, i : ${currencies}">
                         <tr>
                             <!--                    <td th:text="${country.getContinents().getContinentCode()}"></td>-->
-                            <td th:text="${i.index +1}"></td>
-                            <td th:text="${currency.id}"></td>
-                            <td th:text="${currency.currencySeries}"></td>
-                            <td th:text="${currency.notes.size}"></td>
+                            <td th:text="${i.index +1}" class="pt-1 pb-1"></td>
+                            <td th:text="${currency.id}" class="pt-1 pb-1"></td>
                             <td class="pt-1 pb-1">
-                                <a th:href="@{'/note/note_list/?currencySeries=' + ${currency.currencySeries} + '&curId=' + ${currency.id}}">SHOW</a>
-                                <!--                            <a th:href="@{'/note/note_list' + ${currency.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
-                                <!--                            <a th:href="@{'/currency/edit/' + ${currency.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>-->
-                                <!--                            <a th:href="@{'/currency/delete/' + ${currency.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>-->
+                                <a th:href="@{'/note/note_list/?currencySeries=' + ${currency.currencySeries} + '&curId=' + ${currency.id}}">
+                                    [[${currency.currencySeries}]]
+                                </a>
                             </td>
+                            <td th:text="${currency.notes.size}"></td>
+<!--                            <td class="pt-1 pb-1">-->
+<!--                                <a th:href="@{'/note/note_list/?currencySeries=' + ${currency.currencySeries} + '&curId=' + ${currency.id}}">SHOW</a>-->
+<!--                            </td>-->
                         </tr>
                     </Block>
                     </tbody>
