--- a/src/main/resources/templates/note/note_list.html
+++ b/src/main/resources/templates/note/note_list.html
@@ -9,9 +9,9 @@
 <body>
     <div layout:fragment="content" class="container">
     <h1 style="text-align: center">Note</h1>
-    <H3>Ilość banknotów - [[${notes.size}]]</H3>
-        <h3 th:text="${currency.countries.countryEn}"></h3>
-
+<!--        <h3 th:text="${currency.countries.countryEn}"></h3>-->
+        <div th:replace="fragments/_flag :: flag(country = ${currency.countries.countryEn})"></div>
+        <H3>Ilość banknotów - [[${notes.size}]]</H3>
         <div class="container">
             <table class="table table-striped table-bordered table-hover table-sm">
                 <thead class="thead-dark">
