--- a/src/main/resources/templates/note/note_list.html
+++ b/src/main/resources/templates/note/note_list.html
@@ -21,6 +21,7 @@
                     <th>Id</th>
                     <th>Denomination</th>
                     <th>Currency</th>
+                    <th>Image</th>
                     <th style="width: 156px">Akcja</th>
                 </tr>
                 </thead>
@@ -32,6 +33,12 @@
                         <td th:text="${note.id}"></td>
                         <td th:text="${note.denomination}"></td>
                         <td th:text="${note.nameCurrency}"></td>
+                        <td class="p-0 m-0" style="width: 100px">
+                            <div style="display: flex; justify-content: center">
+                                <div th:replace="fragments/_note :: note(note = ${note.aversPath})"></div>
+                                <div th:replace="fragments/_note :: note(note = ${note.reversePath})"></div>
+                            </div>
+                        </td>
                         <td class="pt-1 pb-1">
                             <!--                            <a th:href="@{'/note/note_list' + ${currency.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
                             <!--                            <a th:href="@{'/currency/edit/' + ${currency.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>-->
