--- a/src/main/resources/templates/note/note_list.html
+++ b/src/main/resources/templates/note/note_list.html
@@ -21,6 +21,7 @@
                     <th>Id</th>
                     <th>Denomination</th>
                     <th>Currency</th>
+                    <th>Status</th>
                     <th>Image</th>
                     <th style="width: 156px">Akcja</th>
                 </tr>
@@ -33,6 +34,7 @@
                         <td th:text="${note.id}"></td>
                         <td th:text="${note.denomination}"></td>
                         <td th:text="${note.nameCurrency}"></td>
+                        <td th:text="${note.status}"></td>
                         <td class="p-0 m-0" style="width: 100px">
                             <div style="display: flex; justify-content: center">
                                 <div th:replace="fragments/_note :: note(note = ${note.aversPath})"></div>
