--- a/src/main/resources/templates/note/currency.html
+++ b/src/main/resources/templates/note/currency.html
@@ -32,7 +32,7 @@
                             <td th:text="${i.index +1}" class="pt-1 pb-1"></td>
                             <td th:text="${currency.id}" class="pt-1 pb-1"></td>
                             <td class="pt-1 pb-1">
-                                <a th:href="@{'/note/note_list/?currencySeries=' + ${currency.currencySeries} + '&curId=' + ${currency.id}}">
+                                <a th:href="@{'/note/note_list/?currencySeries=' + ${currency.currencySeries} + '&curId=' + ${currency.id}}" style="color: black">
                                     [[${currency.currencySeries}]]
                                 </a>
                             </td>
