--- a/src/main/resources/templates/note/newNote/loc.html
+++ b/src/main/resources/templates/note/newNote/loc.html
@@ -45,9 +45,12 @@
                             <td th:text="${#numbers.formatDecimal((note.priceBuy * note.quantity),1,2) } + '£'"></td>
                             <td th:text="${note.bought}"></td>
                             <td class="p-0 m-0" style="width: 100px">
-                                <div style="display: flex; justify-content: center">
+                                <div style="display: flex; justify-content: center" data-toggle="modal" th:attr="data-target='#NoteAvers' + ${note.noteId}">
                                     <div th:replace="fragments/_image-small :: image-small(image = ${note.aversPath})"></div>
                                     <div th:replace="fragments/_image-small :: image-small(image = ${note.reversePath})"></div>
+                                </div>
+                                <div class="modal fade" th:attr="id= 'NoteAvers' + ${note.noteId}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div th:replace="note/newNote/_showModal :: showModal"></div>
                                 </div>
                             </td>
                                                     <td class="pt-1 pb-1">
