--- a/src/main/resources/templates/orderItem/index.html
+++ b/src/main/resources/templates/orderItem/index.html
@@ -77,6 +77,7 @@
 <!--                            <div class="modal fade" th:attr="id= 'order-' + ${order.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
 <!--                                <div th:replace="order/_showModal :: showModal"></div>-->
 <!--                            </div>-->
+                            <a th:href="@{'/orderItem/edit/?itemId=' + ${orderItem.id}}" class="btn btn-sm btn-primary mr-1" >Edit</a>
 <!--                                <a th:href="@{'/order/edit/' + ${order.id}}" class="btn btn-sm btn-primary" style="font-size: 10px" >EDIT</a>-->
 <!--                                <a th:href="@{'/order/delete/' + ${order.id}}" class="btn btn-sm btn-danger" style="font-size: 10px; float: right" data-toggle="modal" th:attr="data-target='#order' + ${order.id}" >Delete</a>-->
 <!--                            <div class="modal fade" th:attr="id= 'order' + ${order.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
