--- a/src/main/resources/templates/orderItem/index.html
+++ b/src/main/resources/templates/orderItem/index.html
@@ -73,11 +73,15 @@
                         <td th:text="${orderItem.finalPrice}" class="pt-1 pb-1"></td>
                         <td th:text="${#numbers.formatDecimal(orderItem.quantity * orderItem.finalPrice,1,2)}" class="pt-1 pb-1"></td>
                         <td class="pt-1 pb-1">
-<!--                            <a th:href="@{'/order/show/' + ${order.id}}" class="btn btn-sm btn-info" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#order-' + ${order.id}" >SHOW</a>-->
-<!--                            <div class="modal fade" th:attr="id= 'order-' + ${order.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
-<!--                                <div th:replace="order/_showModal :: showModal"></div>-->
-<!--                            </div>-->
-                            <a th:href="@{'/orderItem/edit/?itemId=' + ${orderItem.id}}" class="btn btn-sm btn-primary mr-1" >Edit</a>
+                            <a th:href="@{'/orderItem/show/' + ${orderItem.id}}" class="btn btn-sm btn-info" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#item-' + ${orderItem.id}" >SHOW</a>
+                            <div class="modal fade" th:attr="id= 'item-' + ${orderItem.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div th:replace="orderItem/_showModal :: showModal"></div>
+                            </div>
+                            <a th:href="@{'/orderItem/edit/?itemId=' + ${orderItem.id}}" class="btn btn-sm btn-primary mr-1" style="font-size: 10px">Edit</a>
+                            <a th:href="@{'/orderItem/delete/' + ${orderItem.id}}" class="btn btn-sm btn-danger" style="font-size: 10px; float: right" data-toggle="modal" th:attr="data-target='#item' + ${orderItem.id}" >Delete</a>
+                            <div class="modal fade" th:attr="id= 'item' + ${orderItem.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div th:replace="orderItem/_confirmDeleteModal :: confirmDeleteModal"></div>
+                            </div>
 <!--                                <a th:href="@{'/order/edit/' + ${order.id}}" class="btn btn-sm btn-primary" style="font-size: 10px" >EDIT</a>-->
 <!--                                <a th:href="@{'/order/delete/' + ${order.id}}" class="btn btn-sm btn-danger" style="font-size: 10px; float: right" data-toggle="modal" th:attr="data-target='#order' + ${order.id}" >Delete</a>-->
 <!--                            <div class="modal fade" th:attr="id= 'order' + ${order.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
